--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,19 @@
 	<groupId>com.shadowverse-Portal</groupId>
 	<artifactId>Shadowverse</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.9.0</version>
+				<configuration>
+					<source>16</source>
+					<target>16</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<!-- SELENIUM -->
 		<dependency>
